# ac-ads4b-testes

./: .gitignore  3b1t-time  CalculadoraIRRF.py  DeducaoDependente.py  DeduzirDependentes.py  GC-Dominium  Keiko  app.py  calculadora.py  calculadora_ir.py  exemplo.py  meutime.txt  nome.txt  professor.txt  pyproject.toml  ruben.txt  test_aliquota_com_dependentes.py  test_calculo_base.py  test_calculoinss.py  test_deducao_dependente.py  test_enquadramento.py  test_exemplo.py  test_final  test_irff.py  teste_enquadramento.py
.cache/v/cache/: lastfailed
